--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ language: perl
 perl:
   - "5.16"
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-cache search hunspell
   - sudo apt-get install libhunspell-1.3-0 libhunspell-dev
   - curl https://raw.githubusercontent.com/JJ/Test-Text/master/data/Spanish.aff -o Spanish.aff
