--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ perl:
   - "5.16"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-cache search hunspell
-  - sudo apt-get install libhunspell-1.3-0 libhunspell-dev
+  - sudo apt-get install libhunspell-1.3-0 libhunspell-dev -qq
   - curl https://raw.githubusercontent.com/JJ/Test-Text/master/data/Spanish.aff -o Spanish.aff
   - curl https://raw.githubusercontent.com/SublimeText/Dictionaries/master/Spanish.dic -o Spanish.dic
   - echo "use Test::Text;\n\njust_check( 'text','.', 'Spanish' )\n" > just_check.t;
